--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.2.0",
+    "@mui/material": "^7.2.0",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-popover": "^1.1.14",
-    "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
@@ -22,7 +25,6 @@
     "react-hook-form": "^7.60.0",
     "react-router-dom": "^7.6.3",
     "tailwind-variants": "^1.0.0",
-    "tailwindcss": "^4.1.11",
     "zod": "^4.0.5",
     "zustand": "^5.0.6"
   },
